rust/tests/snapshots/test_from_file__mosek_bounds.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
sense: Minimize
objectives:
  - name: system_cost
    coefficients:
      - name: Gen_001d01h01
        value: 0.2
      - name: Gen_001d01h02
        value: 0.2
      - name: Gen_001d01h03
        value: 0.2
      - name: Gen_001d01h04
        value: 0.2
      - name: Gen_001d01h05
        value: 0.2
      - name: Gen_001d01h06
        value: 0.2
      - name: Gen_001d01h07
        value: 0.2
      - name: Gen_001d01h08
        value: 0.2
      - name: Gen_001d01h09
        value: 0.2
      - name: Gen_001d01h10
        value: 0.2
      - name: Gen_001d01h11
        value: 0.2
    constant: 0
constraints:
  - type: Standard
    name: dummy_constraint
    coefficients:
      - name: Gen_001d01h01
        value: 1
      - name: Gen_001d01h02
        value: 1
      - name: "SO_GB.XYZ's.Dan.(1)"
        value: 59.983048643
      - name: STU_7_AL.rsuT.Wat.Job.(1)
        value: -0.2
    operator: LTE
    rhs: 1000
variables:
  - name: EF_0_E_Hub_Albania_Demand_Albania
    kind: Continuous
    bounds:
      lower: -999999999.9
      upper: ~
  - name: EF_1_E_Hub_Albania_Demand_Albania
    kind: Continuous
    bounds:
      lower: -999999999.9
      upper: ~
  - name: Gen_001d01h01
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: Gen_001d01h02
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: Gen_001d01h03
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: Gen_001d01h04
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: Gen_001d01h05
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: Gen_001d01h06
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: Gen_001d01h07
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: Gen_001d01h08
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: Gen_001d01h09
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: Gen_001d01h10
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: Gen_001d01h11
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: "SO_GB.XYZ's.Dan.(1)"
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: STU_7_AL.rsuT.Wat.Job.(1)
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
