rust/tests/snapshots/test_from_file__obj_1cons_all_variables_with_bounds.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
sense: Maximize
objectives:
  - name: cost
    coefficients:
      - name: x
        value: -2
      - name: y
        value: -3
      - name: z
        value: 4
    constant: 0
constraints:
  - type: Standard
    name: cons
    coefficients:
      - name: x
        value: 4.4
      - name: y
        value: 5.5
      - name: z
        value: 6.6
    operator: LTE
    rhs: 120
variables:
  - name: x
    kind: Continuous
    bounds:
      lower: -inf
      upper: inf
  - name: y
    kind: General
    bounds:
      lower: 10
      upper: 12
  - name: z
    kind: Binary
    bounds:
      lower: ~
      upper: ~
