rust/tests/snapshots/test_from_file__obj_2cons_all_variable_types.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
sense: Minimize
objectives:
  - name: obj1
    coefficients:
      - name: x
        value: -0.5
      - name: y
        value: -2
      - name: z
        value: -8
    constant: 0
  - name: obj2
    coefficients:
      - name: y
        value: 1
      - name: x
        value: 1
      - name: z
        value: 1
    constant: 0
constraints:
  - type: Standard
    name: cons1
    coefficients:
      - name: x
        value: -199
      - name: y
        value: 10
      - name: z
        value: 1
    operator: LTE
    rhs: 0
  - type: Standard
    name: cons2
    coefficients:
      - name: y
        value: 1
      - name: z
        value: 1
    operator: GTE
    rhs: 0
variables:
  - name: x
    kind: Binary
    bounds:
      lower: ~
      upper: ~
  - name: y
    kind: General
    bounds:
      lower: ~
      upper: ~
  - name: z
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
