rust/tests/snapshots/test_from_file__optional_labels.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
sense: Minimize
objectives:
  - name: OBJ1
    coefficients:
      - name: x
        value: 1
      - name: y
        value: 10
    constant: 0
constraints:
  - type: Standard
    name: C1
    coefficients:
      - name: x
        value: -1
      - name: y
        value: 2
    operator: GTE
    rhs: 1
variables:
  - name: a
    kind: Binary
    bounds:
      lower: ~
      upper: ~
  - name: x
    kind: Binary
    bounds:
      lower: ~
      upper: ~
  - name: y
    kind: Binary
    bounds:
      lower: ~
      upper: ~
  - name: z
    kind: Binary
    bounds:
      lower: ~
      upper: ~
