rust/tests/snapshots/test_from_file__output.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
name: ClpDefaultName
sense: Minimize
objectives:
  - name: obj
    coefficients:
      - name: x0
        value: 5
      - name: x1
        value: 3
      - name: x2
        value: 2
      - name: x3
        value: 7
      - name: x4
        value: 4
    constant: 0
constraints:
  - type: Standard
    name: cons0
    coefficients:
      - name: x0
        value: 2
      - name: x1
        value: 8
      - name: x2
        value: 4
    operator: LTE
    rhs: 10
  - type: Standard
    name: cons1
    coefficients:
      - name: x3
        value: 2
      - name: x4
        value: 5
    operator: LTE
    rhs: 11
variables:
  - name: x0
    kind: Continuous
    bounds:
      lower: 0
      upper: 1
  - name: x1
    kind: Continuous
    bounds:
      lower: 0
      upper: 1
  - name: x2
    kind: Continuous
    bounds:
      lower: 0
      upper: 1
  - name: x3
    kind: Continuous
    bounds:
      lower: 0
      upper: 1
  - name: x4
    kind: Continuous
    bounds:
      lower: 0
      upper: 1
