rust/tests/snapshots/test_from_file__output2_1.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
name: ClpDefaultName
sense: Minimize
objectives:
  - name: obj
    coefficients:
      - name: x0
        value: 2.1
      - name: x1
        value: 1000
      - name: x2
        value: 2.2
      - name: x3
        value: 1000
      - name: x4
        value: 2.3
      - name: x5
        value: 1000
    constant: 0
constraints:
  - type: Standard
    name: cons0
    coefficients:
      - name: x0
        value: 1
      - name: x1
        value: 1
    operator: LTE
    rhs: 21.1
  - type: Standard
    name: cons0_low
    coefficients:
      - name: x0
        value: 1
      - name: x1
        value: 1
    operator: GTE
    rhs: 0
  - type: Standard
    name: cons1
    coefficients:
      - name: x2
        value: 1
      - name: x3
        value: 1
    operator: LTE
    rhs: 22.2
  - type: Standard
    name: cons1_low
    coefficients:
      - name: x2
        value: 1
      - name: x3
        value: 1
    operator: GTE
    rhs: 0
  - type: Standard
    name: cons2
    coefficients:
      - name: x4
        value: 1
      - name: x5
        value: 1
    operator: LTE
    rhs: 23.3
  - type: Standard
    name: cons2_low
    coefficients:
      - name: x4
        value: 1
      - name: x5
        value: 1
    operator: GTE
    rhs: 0
variables:
  - name: x0
    var_type:
      DoubleBound:
        - 0
        - 21.1
  - name: x1
    var_type: Free
  - name: x2
    var_type:
      DoubleBound:
        - 0
        - 22.2
  - name: x3
    var_type: Free
  - name: x4
    var_type:
      DoubleBound:
        - 0
        - 23.3
  - name: x5
    var_type: Free
