rust/tests/snapshots/test_from_file__output2_2.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
name: ClpDefaultName
sense: Minimize
objectives:
  - name: obj
    coefficients:
      - name: x0
        value: 2.1
      - name: x1
        value: 1000
      - name: x2
        value: 2.2
      - name: x3
        value: 1000
      - name: x4
        value: 2.3
      - name: x5
        value: 1000
      - name: x6
        value: 1.1
      - name: x7
        value: 1.2
      - name: x8
        value: 1.3
    constant: 0
constraints:
  - type: Standard
    name: cons0
    coefficients:
      - name: x0
        value: 1
      - name: x1
        value: 1
    operator: LTE
    rhs: 21.1
  - type: Standard
    name: cons1
    coefficients:
      - name: x2
        value: 1
      - name: x3
        value: 1
    operator: LTE
    rhs: 22.2
  - type: Standard
    name: cons2
    coefficients:
      - name: x4
        value: 1
      - name: x5
        value: 1
    operator: LTE
    rhs: 23.3
  - type: Standard
    name: cons3
    coefficients:
      - name: x6
        value: 1
    operator: LTE
    rhs: 11.1
  - type: Standard
    name: cons4
    coefficients:
      - name: x7
        value: 1
    operator: LTE
    rhs: 12.2
  - type: Standard
    name: cons5
    coefficients:
      - name: x8
        value: 1
    operator: LTE
    rhs: 13.3
variables:
  - name: x0
    var_type:
      DoubleBound:
        - 0
        - 21.1
  - name: x1
    var_type: Free
  - name: x2
    var_type:
      DoubleBound:
        - 0
        - 22.2
  - name: x3
    var_type: Free
  - name: x4
    var_type:
      DoubleBound:
        - 0
        - 23.3
  - name: x5
    var_type: Free
  - name: x6
    var_type:
      DoubleBound:
        - 0
        - 11.1
  - name: x7
    var_type:
      DoubleBound:
        - 0
        - 12.2
  - name: x8
    var_type:
      DoubleBound:
        - 0
        - 13.3
