rust/tests/snapshots/test_from_file__output2_3.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
name: ClpDefaultName
sense: Minimize
objectives:
  - name: obj
    coefficients:
      - name: x0
        value: 2.1
      - name: x1
        value: 1000
      - name: x2
        value: 2.2
      - name: x3
        value: 1000
      - name: x4
        value: 2.3
      - name: x5
        value: 1000
      - name: x6
        value: 1.1
      - name: x7
        value: 1.2
      - name: x8
        value: 1.3
    constant: 0
constraints:
  - type: Standard
    name: cons0
    coefficients:
      - name: x0
        value: 1
      - name: x1
        value: 1
    operator: LTE
    rhs: 21.1
  - type: Standard
    name: cons0_low
    coefficients:
      - name: x0
        value: 1
      - name: x1
        value: 1
    operator: GTE
    rhs: 0
  - type: Standard
    name: cons1
    coefficients:
      - name: x2
        value: 1
      - name: x3
        value: 1
    operator: LTE
    rhs: 22.2
  - type: Standard
    name: cons1_low
    coefficients:
      - name: x2
        value: 1
      - name: x3
        value: 1
    operator: GTE
    rhs: 0
  - type: Standard
    name: cons2
    coefficients:
      - name: x4
        value: 1
      - name: x5
        value: 1
    operator: LTE
    rhs: 23.3
  - type: Standard
    name: cons2_low
    coefficients:
      - name: x4
        value: 1
      - name: x5
        value: 1
    operator: GTE
    rhs: 0
  - type: Standard
    name: cons3
    coefficients:
      - name: x6
        value: 1
    operator: LTE
    rhs: 11.1
  - type: Standard
    name: cons3_low
    coefficients:
      - name: x6
        value: 1
    operator: GTE
    rhs: 0
  - type: Standard
    name: cons4
    coefficients:
      - name: x0
        value: -1.1
      - name: x7
        value: 1
    operator: EQ
    rhs: 0
  - type: Standard
    name: cons5
    coefficients:
      - name: x8
        value: 1
    operator: LTE
    rhs: 12.2
  - type: Standard
    name: cons5_low
    coefficients:
      - name: x8
        value: 1
    operator: GTE
    rhs: 0
  - type: Standard
    name: cons6
    coefficients:
      - name: x2
        value: -1.1
      - name: x8
        value: 1
    operator: EQ
    rhs: 0
  - type: Standard
    name: cons7
    coefficients:
      - name: x8
        value: 1
    operator: LTE
    rhs: 13.3
  - type: Standard
    name: cons7_low
    coefficients:
      - name: x8
        value: 1
    operator: GTE
    rhs: 0
  - type: Standard
    name: cons8
    coefficients:
      - name: x4
        value: -1.1
      - name: x8
        value: 1
    operator: EQ
    rhs: 0
variables:
  - name: x0
    kind: Continuous
    bounds:
      lower: 0
      upper: 21.1
  - name: x1
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: x2
    kind: Continuous
    bounds:
      lower: 0
      upper: 22.2
  - name: x3
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: x4
    kind: Continuous
    bounds:
      lower: 0
      upper: 23.3
  - name: x5
    kind: Continuous
    bounds:
      lower: ~
      upper: ~
  - name: x6
    kind: Continuous
    bounds:
      lower: 0
      upper: 11.1
  - name: x7
    kind: Continuous
    bounds:
      lower: 0
      upper: 12.2
  - name: x8
    kind: Continuous
    bounds:
      lower: 0
      upper: 13.3
